welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
while(vuBiscuit()) {
               ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit()) {
^